--- a/style.css
+++ b/style.css
@@ -12,9 +12,6 @@ nav.navbar.sticky-top.navbar-expand-lg.bg-info {
 a.navbar-brand {
     margin: 0 0 0 30px;
 }
-.home:hover {
-    
-}
 .myContainer {
     position: relative;
     text-align: center;
@@ -158,6 +155,23 @@ img.image-intro-who {
 .who-we-are-background {
     width: 100%;
 }
+.centered2 {
+    filter: brightness(60%);
+  }
+  .ul-list2 {
+    /* list-style-type: none;
+    display: flex;
+    justify-content: space-around; */
+    background-color: #2f373b;
+    padding: 20px 0 20px 0;
+    /* align-items: center; */ 
+}
+.intro-contact2 { 
+    background-color: #cfbdd4;
+}
+right2 {
+    align-self: center;
+}
 
 @media (max-width:708px ) {
     .text-centered {
@@ -263,5 +277,40 @@ img.image-intro-who {
     .intro-p {
         margin-top: 3vh;
     }
-   
+    .centered {
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      .intro-contact2 { 
+        background-color: #cfbdd4;
+    }
+    .ul-list2 {
+        /* list-style-type: none;
+        display: flex;
+        justify-content: space-around; */
+        background-color: #2f373b;
+        padding: 10px 0 10px 0;
+        /* align-items: center; */ 
+    }
+    .right2 {
+        align-self: center;
+    }
+    .left {
+        /* width: 70%; */
+        margin: 5vh 2vh 5vh 0vh;
+        padding: 2vh;
+        /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly; */
+    }
+    .right {
+        margin: 5vh 2vh 5vh 2vh;
+        /* width: 90%; */
+        /* display: flex;
+        flex-direction: column;
+        align-items: center; */
+    }
 }
