--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0; 
 }
+
 div#navbarNavAltMarkup {
     justify-content: center;
 }
@@ -169,11 +170,28 @@ img.image-intro-who {
 .intro-contact2 { 
     background-color: #cfbdd4;
 }
-right2 {
+.right2 {
     align-self: center;
 }
+.centered3 {
+    filter: brightness(40%);
+  }
+  .centered4 {
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+  }
 
 @media (max-width:708px ) {
+    * {
+        font-family: 'Abel', sans-serif;
+        margin: 0;
+        padding: 0; 
+    }
+    nav.navbar.sticky-top.navbar-light.navbar-expand-lg.bg-info {
+        padding: 2vh;
+    }
     .text-centered {
         font-size: 60%;
     }
@@ -313,4 +331,10 @@ right2 {
         flex-direction: column;
         align-items: center; */
     }
+    .centered4 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
 }
