--- a/style.css
+++ b/style.css
@@ -182,6 +182,27 @@ img.image-intro-who {
     left: 70%;
     transform: translate(-50%, -50%);
   }
+  .centered5 {
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+  }
+  .right3 {
+    margin: 0vh 15vh 0vh 15vh;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.left2 {
+    /* width: 70%; */
+    margin: 10vh 10vh 10vh 15vh;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly; */
+}
 
 @media (max-width:708px ) {
     * {
